--- a/EosClr/TestUI/MainWindow.xaml
+++ b/EosClr/TestUI/MainWindow.xaml
@@ -1,15 +1,27 @@
 ﻿<Window x:Class="TestUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:assm="clr-namespace:TestUI"
         Title="EOS CLR Test UI" Height="600" Width="800" Closing="Window_Closing">
+    <Window.Resources>
+        <assm:EnumDescriptionConverter x:Key="EnumDescriptionConverter" />
+    </Window.Resources>
     <Grid>
         <Label Content="Select Camera:" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="CameraSelectBox" DisplayMemberPath="Name" HorizontalAlignment="Left" Margin="103,13,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="CameraSelectBox_SelectionChanged"/>
+        <ComboBox x:Name="CameraSelectBox" DisplayMemberPath="Name" HorizontalAlignment="Left" Margin="103,14,0,0" VerticalAlignment="Top" Width="150" SelectionChanged="CameraSelectBox_SelectionChanged"/>
         <ScrollViewer x:Name="LogScroller" HorizontalAlignment="Left" Height="300" Margin="532,10,0,0" VerticalAlignment="Top" Width="250">
             <TextBox x:Name="LogBox" TextWrapping="Wrap"/>
         </ScrollViewer>
-        <Button Content="Start LiveView" HorizontalAlignment="Left" Margin="10,46,0,0" VerticalAlignment="Top" Width="88" Click="StartLiveViewButton_Click"/>
-        <Button Content="Stop LiveView" HorizontalAlignment="Left" Margin="10,73,0,0" VerticalAlignment="Top" Width="88" Click="StopLiveViewButton_Click"/>
+        <Button Content="Start LiveView" HorizontalAlignment="Left" Margin="10,168,0,0" VerticalAlignment="Top" Width="88" Click="StartLiveViewButton_Click"/>
+        <Button Content="Stop LiveView" HorizontalAlignment="Left" Margin="10,195,0,0" VerticalAlignment="Top" Width="88" Click="StopLiveViewButton_Click"/>
+        <Label Content="ISO Speed:" HorizontalAlignment="Left" Margin="30,41,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="IsoBox" HorizontalAlignment="Left" Margin="103,45,0,0" VerticalAlignment="Top" Width="120">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}, Mode=OneWay}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
 
     </Grid>
 </Window>
