--- a/EosClr/TestUI/MainWindow.xaml
+++ b/EosClr/TestUI/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="TestUI.MainWindow"
+﻿<Window x:Name="ThisWindow"
+        x:Class="TestUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:assm="clr-namespace:TestUI"
@@ -15,13 +16,12 @@
         <Button Content="Start LiveView" HorizontalAlignment="Left" Margin="10,168,0,0" VerticalAlignment="Top" Width="88" Click="StartLiveViewButton_Click"/>
         <Button Content="Stop LiveView" HorizontalAlignment="Left" Margin="10,195,0,0" VerticalAlignment="Top" Width="88" Click="StopLiveViewButton_Click"/>
         <Label Content="ISO Speed:" HorizontalAlignment="Left" Margin="30,41,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="IsoBox" HorizontalAlignment="Left" Margin="103,45,0,0" VerticalAlignment="Top" Width="120">
+        <ComboBox x:Name="IsoBox" HorizontalAlignment="Left" Margin="103,45,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="IsoBox_SelectionChanged">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}, Mode=OneWay}"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
         </ComboBox>
-
     </Grid>
 </Window>
