--- a/EosClr/TestUI/MainWindow.xaml
+++ b/EosClr/TestUI/MainWindow.xaml
@@ -24,5 +24,13 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
         <Label x:Name="PicturesLeftLabel" Content="Pictures Left:" HorizontalAlignment="Left" Margin="270,10,0,0" VerticalAlignment="Top"/>
+        <Label Content="Exposure:" HorizontalAlignment="Left" Margin="37,72,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="ExposureBox" HorizontalAlignment="Left" Margin="103,76,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="ExposureBox_SelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Converter={StaticResource EnumDescriptionConverter}, Mode=OneWay}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
     </Grid>
 </Window>
